--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,3 +4,9 @@
     -ms-user-select: none; /* IE10+/Edge */
     user-select: none; /* Standard */
 }
+
+.nav-aside {
+    white-space: normal !important;
+    height: auto !important;
+    padding-bottom: 10px !important;
+}
